# sf-school-navigator

./: .env.example  .gitignore  AGENTS.md  AGENT_BOUNDARIES.md  CLAUDE.md  KNOWN_ISSUES.md  PRIVACY.md  PROGRESS.md  PROGRESS_ARCHIVE.md  PROJECT_STATE.md  README.md  ROADMAP.md  Schools.md  V2_ROADMAP.md  eslint.config.mjs  features.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.claude/: workflow-state.json
docs/: OVERNIGHT_AGENT.md
pipeline/: .env.example  pyproject.toml
pipeline/configs/: enums.yaml  source_mappings.yaml
pipeline/src/pipeline/: __init__.py  __main__.py  cli.py  config.py  db.py  geocode.py  grades.py  slug.py
pipeline/src/pipeline/enrich/: __init__.py  deadlines.py  elfa.py  extract_fields.py  run.py  scraper.py  select_top50.py  writer.py
pipeline/src/pipeline/extract/: attendance_areas.py  ccl.py  cde.py  sfusd.py
pipeline/src/pipeline/load/: attendance_areas.py  cde.py  programs.py  provenance.py  sfusd.py
pipeline/src/pipeline/quality/: diff_report.py  freshness_checks.py  report.py  schema_checks.py  tiering.py
pipeline/src/pipeline/transform/: completeness.py  normalize.py  normalize_cde.py  normalize_sfusd.py
pipeline/src/pipeline/validate/: __init__.py  addresses.py  urls.py
pipeline/tests/: test_attendance_areas.py  test_deadlines.py  test_elfa.py  test_enrich.py  test_extract_ccl.py  test_phase3_elementary.py  test_quality_phase2.py  test_sfusd_load.py  test_transform.py  test_validate_addresses.py  test_validate_urls.py
prompts/: overnight-agent.md
scripts/: seed.ts
(+150 files in other folders)
